2008-07-25  Andreas Kupries  <andreask@activestate.com>

	* tests/info.test: Tests 38.* added, exactly testing the tracking
	of location for uplevel scripts.

	* generic/tclCompile.c (TclInitCompileEnv): Reorganized the
	initialization of the #280 location information to match the flow
	in TclEvalObjEx to get more absolute contexts.

	* generic/tclBasic.c (TclEvalObjEx): Moved the pure-list
	optimization out of the eval-direct code path to be done always,
	i.e. even when a compile is requested. This way we do not loose
	the association between #280 location information and the list
	elements, if any.

2008-07-23  Andreas Kupries  <andreask@activestate.com>

	* tests/info.test: Reordered the tests to have monotonously
	increasing numbers.

	* generic/tclBasic.c: Modified TclArgumentGet to reject pure lists
	* generic/tclCmdIL.c: immediately, without search. Reworked setup
	* generic/tclCompile.c: of eoFramePtr, doesn't need the line
	* tests/info.test: information, more sensible to have everything
	on line 1 when eval'ing a pure list. Updated the users of the line
	information to special case this based on the frame type (i.e.
	TCL_LOCATION_EVAL_LIST). Added a testcase demonstrating the new
	behaviour.

2008-07-22  Andreas Kupries  <andreask@activestate.com>

	* generic/tclBasic.c: Added missing function comments.

	* generic/tclCompile.c: Made the new TclEnterCmdWordIndex
	* generic/tclCompile.h: static, and ansified.

	* generic/tclBasic.c: Reworked the handling of bytecode literals
	* generic/tclCompile.c: for #280 to fix the abysmal performance
	* generic/tclCompile.h: for deep recursion, replaced the linear
	* generic/tclExecute.c: search through the whole stack with
	* generic/tclInt.h: another hashtable and simplified the data
	structure used by the compiler (array instead of hashtable).
	Incidentially this also fixes the memory leak reported via [Bug
	2024937].

2008-07-21  Don Porter  <dgp@users.sourceforge.net>
